syntax = "proto3";

message Profile {
    string handle                 = 1;
    string name                   = 2;
    string location               = 3;
    string about                  = 4;
    string shortDescription       = 5;
    string website                = 6;
    string email                  = 7;
    repeated SocialAccount social = 8;

    bool nsfw                     = 9;
    bool vendor                   = 10;
    bool moderator                = 11;

    string primaryColor           = 12;
    string secondaryColor         = 13;
    string textColor              = 14;

    uint32 followerCount          = 15;
    uint32 followingCount         = 16;
    uint32 listingCount           = 17;

    uint64 lastModified           = 18;

    message SocialAccount {
        string type     = 1;
        string username = 2;
        string proof    = 3;
    }
}
